Closed Bug 1668757 Opened 5 years ago Closed 5 years ago

Fix lifetime extension issues with 0-length literals

Categories

(Core :: XPCOM, defect)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox81 --- unaffected
firefox82 --- unaffected
firefox83 --- fixed

People

(Reporter: sg, Assigned: sg)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

No description provided.
Blocks: 1667434

Set release status flags based on info from the regressing bug 1650145

Pushed by sgiesecke@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1d575944a023 Fix lifetime extension issues with 0-length literals. r=xpcom-reviewers,nika
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
Component: String → XPCOM
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: