Bug 1668757 - Fix lifetime extension issues with 0-length literals. r=xpcom-reviewers,nika

Differential Revision: https://phabricator.services.mozilla.com/D92179